# http-native

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  package-lock.json  package.json  readme.md
.github/bench/: ci.js  run.js  target.js  test-http-bun.js  test-http.js  test.js
.github/bench/fiber-server/: main.go
.github/examples/: README.md
.github/examples/error-handling/: server.js
.github/examples/middleware/: server.js
.github/examples/rest-api/: server.js
.github/examples/validation/: server.js
.github/tests/: test-hot-app.js  test-rate-limit.js  test.js
.github/workflows/: main.yml  publish.yml
bench/: ci.js  run.js  target.js
bench/fiber-server/: go.mod
examples/: README.md
examples/basic/: server.js
examples/cors/: server.js
examples/error-handling/: server.js
examples/middleware/: server.js
examples/rest-api/: server.js
examples/validation/: server.js
opt/: runtime.js
plans/: dynamic-route-performance.md
rsrc/src/: compress.rs  h2_handler.rs  h3_handler.rs  http_utils.rs  lib.rs  manifest.rs  parser.rs  rate_limit.rs  response.rs  router.rs  session.rs  websocket.rs
rust-native/: Cargo.toml  build.rs
rust-native/src/: analyzer.rs  lib.rs  manifest.rs  router.rs  websocket.rs
scripts/: build-native.mjs
scripts/native/: shared.mjs
src/: audit-log.js  body-limit.js  bridge.js  circuit-breaker.js  cli.js  compress.js  cors.js  csrf.js  env.js  error.js  helmet.js  hot.js  http-server.config.js  index.d.ts  index.js  ip-filter.js  logger.js  multipart.js  native.js  openapi.js  otel.js  rate-limit.d.ts  rate-limit.js  request-id.js  session.d.ts  session.js  test.js  validate.js
src/dev/: comments.js  hot-reload.js
src/opt/: constants.js  entry.js  notify.js  runtime.js  summary.js
test/: app.js  app.ts  test.js
