[package]
name = "http_native_napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "rsrc/src/lib.rs"

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
arrayvec = "0.7"
base64 = "0.22"
bumpalo = "3"
bytes = "1.10"
httparse = "1.9"
itoa = "1.0"
json5 = "0.4"
libc = "0.2"
memchr = "2.7"
rustc-hash = "2"
dashmap = "6"
flume = "0.11"
getrandom = "0.2"
sha1 = "0.10"
hmac = "0.12"
monoio = { version = "0.2", features = ["sync", "legacy", "poll-io"] }
h2 = "0.4"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
monoio-rustls = "0.4"
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"
parking_lot = "0.12"
rustls = "0.23"
quinn = "0.11"
tokio = { version = "1", default-features = false, features = ["io-util", "rt-multi-thread", "macros"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
socket2 = { version = "0.5", features = ["all"] }
url = "2.5"
flate2 = "1.1"
brotli = "8"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3
