[package]
name = "http_native_napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.10"
httparse = "1.9"
itoa = "1.0"
json5 = "0.4"
memchr = "2.7"
monoio = { version = "0.2", features = ["sync"] }
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.5", features = ["all"] }
url = "2.5"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3
